objects/Chart_Heirarchy__c/Chart_Heirarchy__c.object-meta.xml
<CustomObject>
    <label>Chart Heirarchy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chart Heirarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>