objects/Chart_Heirarchy__c/fields/Data_Value_Field__c.field-meta.xml
<CustomField>
    <fullName>Data_Value_Field__c</fullName>
    <label>Data Value Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>