objects/Chart_Heirarchy__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>