objects/Chart_Heirarchy__c/fields/Label_Field__c.field-meta.xml
<CustomField>
    <fullName>Label_Field__c</fullName>
    <label>Label Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>