objects/Chart_Heirarchy__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Object</label>
    <referenceTo>Chart_Heirarchy__c</referenceTo>
    <relationshipLabel>Child Objects</relationshipLabel>
    <relationshipName>Parent_Object</relationshipName>
    <type>Lookup</type>
</CustomField>